ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.12
    • Affects Version/s: None
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • Sharding 2017-07-31, Sharding 2017-08-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      While running patch with causal consistency set to true by default got the failure:

      [js_test:server6118] 2017-07-05T16:52:55.756+0000 s20015| 2017-07-05T16:52:55.757+0000 I ASIO     [NetworkInterfaceASIO-ShardRegistry-0] Successfully connected to WIN-4VBEH91NV9K:20011, took 1996ms (1 connections now open to WIN-4VBEH91NV9K:20011)
      [js_test:server6118] 2017-07-05T16:52:55.759+0000 s20015| 2017-07-05T16:52:55.759+0000 I SHARDING [conn1] Placing [test] on: shard0000
      [js_test:server6118] 2017-07-05T16:52:55.759+0000 s20015| 2017-07-05T16:52:55.759+0000 I SHARDING [conn1] Enabling sharding for database [test] in config db
      [js_test:server6118] 2017-07-05T16:52:55.890+0000 s20015| 2017-07-05T16:52:55.889+0000 I SHARDING [conn1] distributed lock with ts: 595d1963386e8efd0d4cdf5a' unlocked.
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015| 2017-07-05T16:52:55.890+0000 F NETWORK  [NetworkInterfaceASIO-ShardRegistry-0] OP_MSG with duplicate field '$logicalTime' : { _configsvrMovePrimary: "test", to: "shard0001", $logicalTime: { clusterTime: Timestamp 1499273575000|3, signature: { hash: BinData(0, 3D46F81E6099541693C9ADDD77E1875F8B54522B), keyId: 6439330895072591873 } }, $replData: 1, $logicalTime: { clusterTime: Timestamp 1499273575000|3, signature: { hash: BinData(0, 3D46F81E6099541693C9ADDD77E1875F8B54522B), keyId: 6439330895072591873 } }, $client: { application: { name: "MongoDB Shell" }, driver: { name: "MongoDB Internal Client", version: "3.5.9-175-ga3f9f13-patch-595d10b92fbabe066c0006f0" }, os: { type: "Windows", name: "Microsoft Windows Server 2008 R2", architecture: "x86_64", version: "6.1 SP1 (build 7601)" } }, $configServerState: { opTime: { ts: Timestamp 1499273575000|3, t: 1 } }, $db: "admin" }
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015| 2017-07-05T16:52:55.890+0000 F -        [NetworkInterfaceASIO-ShardRegistry-0] Fatal Assertion 40474 at src\mongo\util\net\op_msg.cpp 199
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015| 2017-07-05T16:52:55.890+0000 F -        [NetworkInterfaceASIO-ShardRegistry-0]
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015|
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015| ***aborting after fassert() failure
      [js_test:server6118] 2017-07-05T16:52:55.891+0000 s20015|
      

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Misha Tyulenev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: