SERVER-29990 filterCommandRequestForPassthrough before sending to config server